# ucd

./: .gitignore  Doxyfile.in  Makefile.am  README.md  autogen.sh  configure.ac
examples/: Makefile.mk  contig.c  fuf.c  hindexed.c  hindexed_block.c  hvector.c  indexed.c  indexed_block.c  iov.c  resized.c  subarray.c  vector.c
m4/: aclocal_libs.m4  aclocal_util.m4
maint/: Version.base.m4  ucd.pc.in  version.m4
maint/hooks/: pre-commit
src/: Makefile.mk  ucd.h.in  ucd_internal.h  ucd_wrappers_stub.c  ucd_wrappers_yaksa.c  ucdi_init.c
